--- a/src/copy-box.scss
+++ b/src/copy-box.scss
@@ -1,36 +1,35 @@
+.copy-box {
 
-
-.copy-box{
-   $color-pasting: rgba($color-neon-blue, 0.5);
-   $color-copying: rgba($color-neon-green, 0.5);
-   $color-bg: rgba(225, 225, 225, 1);
+   $color-pasting: rgba(103, 200, 255, 1) !default;
+   $color-copying: rgba(180, 253, 11, 1) !default;
 
    transition: background-color 0.25s ease;
    font-size: 1.25rem;
    min-width: 2rem;
    display: inline-block;
    position: relative;
-   // background-color: $color-bg;
 
-   input{
+   input {
       border: none;
       background-color: transparent;
       width: 3rem;
       height: 3rem;
       font-family: "FontAwesome";
       text-align: center;
-      &:focus{
+
+      &:focus {
          border: thin gray solid;
       }
    }
-   &.copying{
+
+   &.copying {
       background-color: $color-copying;
       color: white;
    }
-   &.pasting{
+
+   &.pasting {
       background-color: $color-pasting;
       color: white;
    }
-   
-}
 
+}
